alumnos con el formulario de busqueda

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-</head>
-<body>
-    <form id="frmAlumnos">
+</head>    
+
+<body> 
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <form id="frmAlumnos">
+                    
+                </form>
         <div class="card text-bg-dark mb-3" style="max-width: 36rem;">
             <div class="card-header">REGISTRO DE ALUMNOS</div>
             <div class="card-body">
@@ -61,8 +67,32 @@
                 </div>
             </div>
         </div>
+            </div>
+        </div>
+
+    </div>
+   
+    <form id="frmAlumnos">
+<div class="col-6">
+        <form id="table table-hover table-hover" id ="tblAlumnos">
+            <table class="table table-striped table-hover" id="tblAlumnos">
+                <thead>
+                    <tr>
+                        <th>CODIGO</th>
+                        <th>NOMBRE</th>
+                        <th>DIRECCION</th>
+                        <th>EMAIL</th>
+                        <th>TELEFONO</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+
+            </form>
+        </div>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    
     <script src="main.js"></script>
 </body>
 </html>
