--- a/index.html
+++ b/index.html
@@ -1,185 +1,40 @@
 <!doctype html>
-<html lang="es"> 
-  <head>
+<html lang="es">
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro de Alumnos</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-    />
-  </head>
-  <body>
-    <div class="container" id="app">
-      <div class="row">
-        <div class="col-6">
-          <form
-            id="frmAlumnos"
-            @submit.prevent="guardarAlumno"
-            @reset.prevent="limpiarFormulario"
-          >
-            
-            <div class="card">
-              <div class="p-3 mb-2 bg-primary-subtle text-primary-emphasis">FORMULARIO DE ALUMNOS</div>
-              <div class="card-body">
-                <div class="row p-1">
-                  <div class="col-3">CODIGO:</div>
-                  <div class="col-3">
-                    <input
-                      placeholder="codigo"
-                      required
-                      v-model="alumno.codigo"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div>
+    <title></title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" />
+</head>
+<body>
+    <div id="app">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">::.. SISTEMA ACADEMICO ..::</a>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="#" @click="abrirVentana('alumnos')">Alumnos</a>
+                        <a class="nav-link" href="#" @clik="abrirVentana('materias')">Materias</a>
+                        <a class="nav-link" href="#" @clik="abrirVentana('docentes')">Docentes</a>
+                        <a class="nav-link" @clik="abrirVentana('inscripciones')">Inscripciones</a>
+                    </div>
                 </div>
-                <div class="row p-1">
-                  <div class="col-3">NOMBRE:</div>
-                  <div class="col-6">
-                    <input
-                      placeholder="nombre"
-                      required
-                      v-model="alumno.nombre"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-                <div class="row p-1">
-                  <div class="col-3">DIRECCION:</div>
-                  <div class="col-9">
-                    <input
-                      placeholder="direccion"
-                      required
-                      v-model="alumno.direccion"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-                <div class="row p-1">
-                  <div class="col-3">MUNICIPIO:</div>
-                  <div class="col-6">
-                    <input
-                      placeholder="municipio"
-                      required
-                      v-model="alumno.municipio"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-                <div class="row p-1">
-                  <div class="col-3">DEPARTAMENTO:</div>
-                  <div class="col-6">
-                    <input
-                      placeholder="departamento"
-                      required
-                      v-model="alumno.departamento"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-                <div class="row p-1">
-                  <div class="col-3">TELEFONO:</div>
-                  <div class="col-4">
-                    <input
-                      placeholder="telefono"
-                      required
-                      v-model="alumno.telefono"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-                <div class="row p-1">
-                  <div class="col-3">FECHA NAC.:</div>
-                  <div class="col-5">
-                    <input
-                      required
-                      v-model="alumno.fecha_nacimiento"
-                      type="date"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
-                <div class="row p-1">
-                  <div class="col-3">SEXO:</div>
-                  <div class="col-4">
-                    <select v-model="alumno.sexo" class="form-select" required>
-                      <option value="Masculino">Masculino</option>
-                      <option value="Femenino">Femenino</option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-              <div class="col text-center d-flex justify-content-center gap-2">
-                <button type="submit" class="btn btn-primary">GUARDAR</button>
-                <button type="reset" class="btn btn-warning">NUEVO</button>
-              </div>
             </div>
-          </form>
-        </div>
-        <div class="col-6">
-          <table class="table table-striped table-hover" id="tblAlumnos">
-            <thead>
-              <tr>
-                <th colspan="8">
-                  <input
-                    autocomplete="off"
-                    type="search"
-                    @keyup="obtenerAlumnos()"
-                    v-model="buscar"
-                    placeholder="Buscar alumno"
-                    class="form-control"
-                  />
-                </th>
-              </tr>
-              <tr>
-                <th>CODIGO</th>
-                <th>NOMBRE</th>
-                <th>DIRECCION</th>
-                <th>MUNICIPIO</th>
-                <th>DEPTO.</th>
-                <th>TEL.</th>
-                <th>NAC.</th>
-                <th>SEXO</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr
-                v-for="alumno in alumnos"
-                :key="alumno.id"
-                @click="modificarAlumno(alumno)"
-              >
-                <td>{{ alumno.codigo }}</td>
-                <td>{{ alumno.nombre }}</td>
-                <td>{{ alumno.direccion }}</td>
-                <td>{{ alumno.municipio }}</td>
-                <td>{{ alumno.departamento }}</td>
-                <td>{{ alumno.telefono }}</td>
-                <td>{{ alumno.fecha_nacimiento }}</td>
-                <td>{{ alumno.sexo }}</td>
-                <td>
-                  <button
-                    class="btn btn-danger btn-sm"
-                    @click="eliminarAlumno(alumno.id, $event)"
-                  >
-                    DEL
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+        </nav>
+        <div id="appSistema" class="container-fluid">
+            <alumnos :forms="forms" ref="alumnos" v-show="forms.alumnos.mostrar"></alumnos>
+            <busqueda_alumnos v-show="forms.busqueda_alumnos.mostrar"></busqueda_alumnos>
+           
 
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dexie/4.2.0/dexie.min.js"
+        integrity="sha512-LuXLH9xON6/aAGYxi4Z1Dx8588Z80gY3iMmGtUlYmblUc1ulC/cGHuANXIvm8fnIWp5ShUk2MRBIWylGguXF9g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="componentes/alumnos.js"></script>
+    <script src="componentes/busqueda_alumnos.js"></script>
     <script src="main.js"></script>
-  </body>
+</body>
 </html>
